manifests/demo/client-pods.yaml
apiVersion: v1
kind: Pod
metadata:
  name: curl-same-ns
  namespace: demo
  labels:
    app: curl
spec:
  containers:
    - name: curl
      image: curlimages/curl:8.10.1
      command: ["sleep", "3600"]
  restartPolicy: Always
---
apiVersion: v1
kind: Pod
metadata:
  name: curl-other-ns
  namespace: default
spec:
  containers:
    - name: curl
      image: curlimages/curl:8.10.1
      command: ["sleep", "3600"]
  restartPolicy: Always
